apps/production/plex/plex-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    gethomepage.dev/href: "https://plex.hephlab.duckdns.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Plex"
    gethomepage.dev/description: "Plex Media Server"
    gethomepage.dev/app: plex
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "plex.png"    
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`plex.hephlab.duckdns.org`) 
      kind: Rule
      services:
        - name: plex
          port: 32400
          namespace: plex
